[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-deps"
version = "0.1.0"
description = "Sage Deps"
authors = [{ name="Andrew Luo", email="j92luo@uwaterloo.ca" }]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
sdeps = "sagedeps.main:main"

[tool.setuptools.packages.find]
where = ["src"]